# calculator

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: calculator.py  main.py  operators.py  rpn_evaluator.py  shunting_yard.py
src/modules/: calculator.py  rpn_evaluator.py  shunting_yard.py  tokenizer.py
tests/: test_error.py  test_expressions.py
