[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]
[tool.uv.sources]
calculator = { path = "." }

[tool.mypy]
python_version = "3.9"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "modules.*"
disallow_untyped_defs = false
